--- a/src/main/resources/com/example/retoajedrez/PosiblesPremiosB.fxml
+++ b/src/main/resources/com/example/retoajedrez/PosiblesPremiosB.fxml
@@ -10,15 +10,14 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1504.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.retoajedrez.OpenBPremioController">
     <children>
         <Button fx:id="optarb" layoutX="61.0" layoutY="221.0" mnemonicParsing="false" onAction="#optarB" prefHeight="50.0" prefWidth="186.0" text="Buscar Premios" />
-        <TableView fx:id="tblposiblespremiosa" layoutX="270.0" layoutY="14.0" prefHeight="705.0" prefWidth="1226.0">
+        <TableView fx:id="tblposiblespremiosB" layoutX="270.0" layoutY="14.0" prefHeight="705.0" prefWidth="1226.0">
             <columns>
-                <TableColumn fx:id="colRanking" text="Ranking" />
-                <TableColumn fx:id="colRankingFinal" prefWidth="123.0" text="RankingFinal" />
-                <TableColumn fx:id="colPremios" prefWidth="237.0" text="Premios" />
-                <TableColumn fx:id="colNombre" minWidth="0.0" prefWidth="490.0" text="Nombre" />
-                <TableColumn fx:id="colFideID" minWidth="0.0" prefWidth="168.0" text="FIDEID" />
-                <TableColumn fx:id="colInfo" minWidth="0.0" prefWidth="40.0" text="Info" />
-                <TableColumn fx:id="colDesc" maxWidth="278.0" prefWidth="87.0" text="Desc" />
+                <TableColumn fx:id="colRanking" style="-fx-alignment: CENTER;" text="Ranking" />
+                <TableColumn fx:id="colRankingFinal" prefWidth="123.0" style="-fx-alignment: CENTER;" text="RankingFinal" />
+                <TableColumn fx:id="colPremios" prefWidth="237.0" style="-fx-alignment: CENTER;" text="Premios" />
+                <TableColumn fx:id="colNombre" minWidth="0.0" prefWidth="490.0" style="-fx-alignment: CENTER;" text="Nombre" />
+                <TableColumn fx:id="colFideID" minWidth="0.0" prefWidth="217.0" style="-fx-alignment: CENTER;" text="FIDEID" />
+                <TableColumn fx:id="colDesc" maxWidth="278.0" prefWidth="59.0" style="-fx-alignment: CENTER;" text="Desc" />
             </columns>
         </TableView>
         <ImageView fitHeight="162.0" fitWidth="162.0" layoutX="80.0" layoutY="16.0">
@@ -26,7 +25,7 @@
                 <Image url="@Imagenes/LOGO.png" />
             </image>
         </ImageView>
-        <Button layoutX="15.0" layoutY="16.0" mnemonicParsing="false" onAction="#irAlMenu" prefHeight="40.0" prefWidth="40.0">
+        <Button fx:id="iraopenb" layoutX="15.0" layoutY="16.0" mnemonicParsing="false" onAction="#irAOpenB" prefHeight="40.0" prefWidth="40.0">
             <graphic>
                 <ImageView fx:id="iramenu" fitHeight="36.0" fitWidth="28.0" onDragDetected="#irAlMenu" pickOnBounds="true" preserveRatio="true">
                     <image>
