--- a/src/main/resources/com/example/retoajedrez/PosiblesPremiosA.fxml
+++ b/src/main/resources/com/example/retoajedrez/PosiblesPremiosA.fxml
@@ -16,9 +16,8 @@
             <TableColumn fx:id="colRankingFinal" prefWidth="123.0" text="RankingFinal" />
             <TableColumn fx:id="colPremios" prefWidth="237.0" text="Premios" />
                 <TableColumn fx:id="colNombre" minWidth="0.0" prefWidth="490.0" text="Nombre" />
-                <TableColumn fx:id="colFideID" minWidth="0.0" prefWidth="168.0" text="FIDEID" />
-                <TableColumn fx:id="colInfo" minWidth="0.0" prefWidth="40.0" text="Info" />
-            <TableColumn fx:id="colDesc" maxWidth="278.0" prefWidth="87.0" text="Desc" />
+                <TableColumn fx:id="colFideID" minWidth="0.0" prefWidth="222.0" text="FIDEID" />
+            <TableColumn fx:id="colDesc" maxWidth="278.0" prefWidth="58.0" text="Desc" />
             </columns>
         </TableView>
         <ImageView fitHeight="162.0" fitWidth="162.0" layoutX="80.0" layoutY="16.0">
@@ -26,7 +25,7 @@
                 <Image url="@Imagenes/LOGO.png" />
             </image>
         </ImageView>
-        <Button layoutX="15.0" layoutY="16.0" mnemonicParsing="false" onAction="#irAlMenu" prefHeight="40.0" prefWidth="40.0">
+        <Button fx:id="iraopena" layoutX="15.0" layoutY="16.0" mnemonicParsing="false" onAction="#irAOpenA" prefHeight="40.0" prefWidth="40.0">
             <graphic>
                 <ImageView fx:id="iramenu" fitHeight="36.0" fitWidth="28.0" onDragDetected="#irAlMenu" pickOnBounds="true" preserveRatio="true">
                     <image>
