--- a/src/main/resources/com/example/retoajedrez/OpenA.fxml
+++ b/src/main/resources/com/example/retoajedrez/OpenA.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="692.0" prefWidth="1225.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.retoajedrez.OpenAController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="690.0" prefWidth="1218.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.retoajedrez.OpenAController">
     <children>
-        <Button fx:id="iraposiblespremiosa" layoutX="61.0" layoutY="408.0" mnemonicParsing="false" onAction="#irAPosiblesPremiosA" prefHeight="50.0" prefWidth="186.0" text="Posibles premios" />
-        <Button fx:id="importara" layoutX="56.0" layoutY="204.0" mnemonicParsing="false" onAction="#importarA" prefHeight="50.0" prefWidth="186.0" text="Importar" />
-        <TableView fx:id="tblJugadoresA" layoutX="270.0" layoutY="14.0" prefHeight="663.0" prefWidth="930.0">
+        <Button fx:id="iraposiblespremiosa" layoutX="56.0" layoutY="435.0" mnemonicParsing="false" onAction="#irAPosiblesPremiosA" prefHeight="50.0" prefWidth="186.0" text="Premios" />
+        <Button fx:id="importara" layoutX="56.0" layoutY="283.0" mnemonicParsing="false" onAction="#importarA" prefHeight="50.0" prefWidth="186.0" text="Importar" />
+        <TableView fx:id="tblJugadoresA" layoutX="270.0" layoutY="14.0" prefHeight="663.0" prefWidth="933.0">
             <columns>
                 <TableColumn fx:id="colRanking" editable="false" sortType="DESCENDING" style="-fx-alignment: CENTER;" text="Ranking" />
                 <TableColumn fx:id="colNombre" minWidth="0.0" prefWidth="449.0" style="-fx-alignment: CENTER;" text="Nombre" />
@@ -21,13 +21,11 @@
                 <TableColumn fx:id="colInfo" minWidth="0.0" prefWidth="52.0" style="-fx-alignment: CENTER;" text="Info" />
             </columns>
         </TableView>
-
         <ImageView fitHeight="162.0" fitWidth="162.0" layoutX="80.0" layoutY="16.0">
             <image>
                 <Image url="@Imagenes/LOGO.png" />
             </image>
         </ImageView>
-        <Button layoutX="56.0" layoutY="306.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="186.0" text="Modificar" />
         <Button layoutX="15.0" layoutY="16.0" mnemonicParsing="false" onAction="#irAlMenu" prefHeight="40.0" prefWidth="40.0">
             <graphic>
                 <ImageView fx:id="iramenu" fitHeight="36.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
