--- a/src/main/resources/com/example/retoajedrez/OpenB.fxml
+++ b/src/main/resources/com/example/retoajedrez/OpenB.fxml
@@ -9,8 +9,8 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="690.0" prefWidth="1218.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.retoajedrez.OpenBController">
     <children>
-        <Button fx:id="iraposiblespremiosb" layoutX="61.0" layoutY="408.0" mnemonicParsing="false" onAction="#irAPosiblesPremiosB" prefHeight="50.0" prefWidth="186.0" text="Posibles premios" />
-        <Button fx:id="importarb" layoutX="56.0" layoutY="204.0" mnemonicParsing="false" onAction="#importarB" prefHeight="50.0" prefWidth="186.0" text="Importar" />
+        <Button fx:id="iraposiblespremiosb" layoutX="56.0" layoutY="435.0" mnemonicParsing="false" onAction="#irAPosiblesPremiosB" prefHeight="50.0" prefWidth="186.0" text="Premios" />
+        <Button fx:id="importarb" layoutX="56.0" layoutY="283.0" mnemonicParsing="false" onAction="#importarB" prefHeight="50.0" prefWidth="186.0" text="Importar" />
         <TableView fx:id="tblJugadoresB" layoutX="270.0" layoutY="14.0" prefHeight="663.0" prefWidth="933.0">
             <columns>
                 <TableColumn fx:id="colRanking" editable="false" sortType="DESCENDING" style="-fx-alignment: CENTER;" text="Ranking" />
@@ -26,7 +26,6 @@
                 <Image url="@Imagenes/LOGO.png" />
             </image>
         </ImageView>
-        <Button layoutX="56.0" layoutY="306.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="186.0" text="Modificar" />
         <Button layoutX="15.0" layoutY="16.0" mnemonicParsing="false" onAction="#irAlMenu" prefHeight="40.0" prefWidth="40.0">
             <graphic>
                 <ImageView fx:id="iramenu" fitHeight="36.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
